edited about.html to make it SEO friendly

--- a/about.html
+++ b/about.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Learn more about Mellania Banda and some of her skills and achievements"
+    />
     <link rel="stylesheet" href="style.css" />
     <title>About Mellania Banda</title>
     <link
@@ -36,21 +39,31 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html"
+              <a
+                class="nav-link active"
+                aria-current="page"
+                href="index.html"
+                title="Back to homepage"
                 >Home</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html">About me</a>
+              <a class="nav-link" href="about.html" title="About Mellania"
+                >About me</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html#contact">Contact me</a>
+              <a
+                class="nav-link"
+                href="about.html#contact"
+                title="Contact Mellania"
+                >Contact me</a
+              >
             </li>
           </ul>
         </div>
       </div>
     </nav>
-    <a href="index.html" class="homepage-link">Back to homepage</a>
     <h1>About me</h1>
     <h3>Front-end developer from Harare, Zimbabwe</h3>
     <div class="about-paragraphs">
@@ -63,22 +76,35 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-4">
-          <img src="images/yoga.png" class="img-fluid p-2 shadow rounded" />
+          <img
+            src="images/yoga.png"
+            class="img-fluid p-2 shadow rounded"
+            alt="Yoga"
+          />
         </div>
         <div class="col-sm-4">
           <img
             src="images/weather-app.png"
             class="img-fluid p-2 shadow rounded"
+            alt="Weather app"
           />
         </div>
         <div class="col-sm-4">
-          <img src="images/yogurt.png" class="img-fluid p-2 shadow rounded" />
+          <img
+            src="images/yogurt.png"
+            class="img-fluid p-2 shadow rounded"
+            alt="Yogurt"
+          />
         </div>
       </div>
     </div>
     <div id="contact">
       <h2>📮 Contact me</h2>
-      <a href="mailto:melanbanda@gmail.com" class="email-link">
+      <a
+        href="mailto:melanbanda@gmail.com"
+        class="email-link"
+        title="Email Mellania"
+      >
         melanbanda@gmail.com
       </a>
     </div>
