made some changes to the html files and added some  media query to the css file

--- a/about.html
+++ b/about.html
@@ -65,7 +65,7 @@
       </div>
     </nav>
     <h1>About me</h1>
-    <h3>Front-end developer from Harare, Zimbabwe</h3>
+    <h3 class="mt-5">Front-end developer from Harare, Zimbabwe</h3>
     <div class="about-paragraphs">
       <p class="bg-white">
         I'm a passionate software developer dedicated to crafting innovative
