--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <h1>Mellania Banda</h1>
     <h3>Front-end developer, based in Cape Town</h3>
     <div class="navigation-links">
-      <a href="about.html#contact" class="contact-link" title="Contact Mellania">Contact me</a>
+      <a href="about.html#contact" class="contact-link" title="Mellania Contact Details">Contact me</a>
       <a href="about.html" class="about-link" title="About Mellania">About me</a>
     </div>
     <div class="container">
@@ -70,7 +70,7 @@
             to calm your mind and strengthen your body.
             Take a deep breath, relax, and let our app be your sanctuary anywhere, anytime! 
           <div class="mt-2">
-          <a href="#" class="btn btn-primary">Launch Yoga App</a>
+          <a href="#" class="btn btn-primary" title="Launch application">Launch Yoga App</a>
         </div>
       </div>
     </div>
@@ -85,7 +85,7 @@
           providing you with the information you need to plan your day, week, or month with confidence.
       
         </p>
-        <a href="#" class="btn btn-primary mb-2">Launch Weather App</a>
+        <a href="#" class="btn btn-primary mb-2"title="Launch Application">Launch Weather App</a>
       </div>
         <div class="col-md-6 bg-red">
           <img src="images/weather-app.png" class="img-fluid rounded" alt="weather app "/>
@@ -102,7 +102,7 @@
               Whether you're a health enthusiast or a foodie,our app is the perfect scoop of fun 
               and functionality.Dive in and get your daily dose of deliciousness!
             </p>
-            <a href="#" class="btn btn-primary">Launch Yogurt App</a>
+            <a href="#" class="btn btn-primary" title="Launch Application">Launch Yogurt App</a>
           </div>
         </div>
   </div>       
